cabal-version:      2.4
name:               cardano-ledger
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common globalOptions
    default-language: Haskell2010
    build-depends: base
    other-extensions:
        CPP PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms DeriveGeneric
    ghc-options:
        -Wno-overlapping-patterns

test-suite test
    import: globalOptions
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:
        UtxowSpec
    build-depends:
        cardano-ledger,
        hspec,
        HUnit
    build-tool-depends: hspec-discover:hspec-discover
    type: exitcode-stdio-1.0
    ghc-options:
        -Wall
        -threaded -rtsopts -with-rtsopts=-N
        -fno-warn-type-defaults

library
    import: globalOptions
    hs-source-dirs: .
    exposed-modules:
        Lib
    build-depends:
        text,
        ieee,
        tree-diff
-- This will be generated automatically when building with nix
    other-modules:
